--- a/web/css/task/user-tasks.css
+++ b/web/css/task/user-tasks.css
@@ -15,7 +15,7 @@ body {
 
 .container {
     width: 90%;
-    max-width: 1000px;
+    max-width: 1200px;
     margin: 20px auto;
     padding: 20px;
     background-color: #fff;
@@ -39,6 +39,10 @@ table th, table td {
     padding: 12px 15px;
     border: 1px solid #ddd;
     text-align: center;
+    max-width: 100px; 
+    word-wrap: break-word; 
+    word-break: break-word; 
+    overflow-wrap: break-word; 
 }
 
 table th {
@@ -116,4 +120,26 @@ table td:nth-child(4), table td:nth-child(7) {
 .button-group {
     display: flex; /* Sử dụng flexbox để xếp ngang */
     gap: 5px; /* Khoảng cách giữa các nút */
+}
+
+.back-arrow {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.back-arrow:hover {
+    background-color: #45a049;
 }
