--- a/web/css/user/edit-user.css
+++ b/web/css/user/edit-user.css
@@ -57,3 +57,25 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+.back-arrow {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    background-color: #007BFF;
+    color: white;
+    padding: 10px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.back-arrow:hover {
+    background-color: #0056b3;
+}
